--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,9 +30,11 @@
     })
 </script>
 <div>
+    <form>
     <label for="name">PDF Name : </label><input name="name" id="name"/>
     <label for="url">URL: </label><input name="url" id="url"/>
     <button id="generate">Generate</button>
+    </form>
 </div>
 <br /><br /><br />
 <div id="files">
