--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,18 +23,16 @@
                 let filesDiv = $("#files");
                 filesDiv.html("")
                 data.forEach(function (file) {
-                    filesDiv.append('<a href="storage/'+ file + '">' + file  + "</a><br/>")
+                    filesDiv.append('<a href="storage/'+ file + '" id="' + file + '">' + file  + "</a><br/>")
                 });
             });
         }, 1000);
     })
 </script>
 <div>
-    <form >
         <label for="name">PDF Name : </label><input name="name" id="name"/>
         <label for="url">URL: </label><input name="url" id="url"/>
         <button id="generate">Generate</button>
-    </form>
 </div>
 <br /><br /><br />
 <div id="files">
