--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Generate pdf</title>
-    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+    <script src="jquery-3.2.1.js"></script>
 </head>
 <body>
 <script type="text/javascript">
